# pChat

./: .gitignore  CMakeLists.txt  adduseritem.cpp  adduseritem.h  adduseritem.ui  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.h  applyfrienditem.ui  applyfriendlist.cpp  applyfriendlist.h  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  authenfriend.cpp  authenfriend.h  authenfriend.ui  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  (+62 more)
resources/styles/: styleSheet.qss
